--- a/udemy-akka-essentials/src/main/resources/application.conf
+++ b/udemy-akka-essentials/src/main/resources/application.conf
@@ -23,3 +23,58 @@
           }
 
         }
+
+        # routers demo
+        routersDemo {
+          akka {
+            actor.deployment {
+              /poolMaster2 {
+                router = round-robin-pool
+                nr-of-insnances = 5
+              }
+
+              /groupMaster2 {
+                router = round-robin-group
+                routees.paths = ["/user/slave_1","/user/slave_2","/user/slave_3","/user/slave_4","/user/slave_5"]
+              }
+            }
+          }
+        }
+
+        ##dispachers demo
+        my-dispatcher{
+          type = Dispatcher #PinnedDispacher, CallingThreadDispacher (Solution #2)
+          executor = "thread-pool-executor"
+          thread-pool-executor {
+            fixed-pool-size = 1
+          }
+          throughput = 30
+        }
+
+        dispatchersDemo{
+          akka.actor.deployment{
+            /rtjvm{
+              dispacher = my-dispatcher
+            }
+          }
+        }
+
+        #mailbox demo
+
+        mailboxesDemo {
+          support-ticket-dispatcher {
+            mailbox-type = "part5infra.Mailboxes$SupportTicketPriorityMailbox"
+          }
+
+          control-mailbox{
+            mailbox-type = "akka.dispatch.UnboundedControlAwareMailbox"
+          }
+          akka.actor.deployment{
+            /altControlAwareActor{
+              mailbox = control-mailbox
+            }
+          }
+
+
+
+        }
